<resources>
    <string name="app_name">Picto</string>
    <string name="action_settings">Settings</string>
    <string name="action_take_picture">Take Picture</string>
    <string name="action_connect">Connect</string>
    <string name="action_login">Login</string>
    <string name="action_messages">Messages</string>
    <string name="action_pictures">Pictures</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_add_message">Add Message</string>
    <string name="user_id_prompt">Enter User ID</string>
    <string name="password_prompt">Enter Password</string>
    <string name="submit_button_label">Submit</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="title_activity_message_send_save">MessageSendSaveActivity</string>
    <string name="timeout_prompt">Choose a timeout (seconds)</string>
    <string name="contacts_prompt">Choose a Contact</string>
    <string-array name="timeout_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="title_activity_contact_list">ContactListActivity</string>
</resources>
